###########
# headers #
###########

if not meson.is_subproject()

  install_headers(
    files([
        'codons.h',
        'GArgs.h',
        'GBase.h',
        'gdna.h',
        'GFaSeqGet.h',
        'GFastaIndex.h',
        'gff_utils.h',
        'gff.h',
        'GHash.hh',
        'GList.hh',
        'GStr.h',
        'GVec.hh',
       ])
    )

endif

libgff_include_directories = include_directories('.')